

add_executable(bitmapviewer bitmapviewer.cpp)
target_link_libraries(bitmapviewer FOX)

add_executable(button button.cpp)
target_link_libraries(button FOX)

add_executable(calendar calendar.cpp)
target_link_libraries(calendar FOX)

add_executable(codecs codecs.cpp)
target_link_libraries(codecs FOX)

add_executable(console console.cpp)
target_link_libraries(console FOX)

add_executable(datatarget datatarget.cpp)
target_link_libraries(datatarget FOX)

add_executable(dctest dctest.cpp)
target_link_libraries(dctest FOX)

add_executable(dialog dialog.cpp)
target_link_libraries(dialog FOX)

add_executable(dirlist dirlist.cpp)
target_link_libraries(dirlist FOX)

add_executable(expression expression.cpp)
target_link_libraries(expression FOX)

add_executable(format format.cpp)
target_link_libraries(format FOX)

add_executable(foursplit foursplit.cpp)
target_link_libraries(foursplit FOX)

add_executable(gaugetest gaugetest.cpp)
target_link_libraries(gaugetest FOX)

add_executable(gltest gltest.cpp)
target_link_libraries(gltest FOX)

add_executable(glviewer glviewer.cpp)
target_link_libraries(glviewer FOX)

add_executable(groupbox groupbox.cpp)
target_link_libraries(groupbox FOX)

add_executable(half half.cpp)
target_link_libraries(half FOX)

add_executable(header header.cpp)
target_link_libraries(header FOX)

add_executable(hello hello.cpp)
target_link_libraries(hello FOX)






