find_package(OpenGL)

add_executable(bitmapviewer bitmapviewer.cpp)
target_link_libraries(bitmapviewer FOX)

add_executable(button button.cpp)
target_link_libraries(button FOX)

add_executable(calendar calendar.cpp)
target_link_libraries(calendar FOX)

add_executable(codecs codecs.cpp)
target_link_libraries(codecs FOX)

add_executable(console console.cpp)
target_link_libraries(console FOX)

add_executable(datatarget datatarget.cpp)
target_link_libraries(datatarget FOX)

add_executable(dctest dctest.cpp)
target_link_libraries(dctest FOX)

add_executable(dialog dialog.cpp)
target_link_libraries(dialog FOX)

add_executable(dirlist dirlist.cpp)
target_link_libraries(dirlist FOX)

add_executable(expression expression.cpp)
target_link_libraries(expression FOX)

add_executable(format format.cpp)
target_link_libraries(format FOX)

add_executable(foursplit foursplit.cpp)
target_link_libraries(foursplit FOX)

add_executable(gaugetest gaugetest.cpp)
target_link_libraries(gaugetest FOX)

add_executable(gltest gltest.cpp)
target_link_libraries(gltest FOX)

add_executable(groupbox groupbox.cpp)
target_link_libraries(groupbox FOX)

add_executable(half half.cpp)
target_link_libraries(half FOX)

add_executable(header header.cpp)
target_link_libraries(header FOX)

add_executable(hello hello.cpp)
target_link_libraries(hello FOX)

add_executable(hello2 hello2.cpp)
target_link_libraries(hello2 FOX)

add_executable(iconlist iconlist.cpp)
target_link_libraries(iconlist FOX)

add_executable(image image.cpp)
target_link_libraries(image FOX)

add_executable(imageviewer imageviewer.cpp)
target_link_libraries(imageviewer FOX)

add_executable(layout layout.cpp)
target_link_libraries(layout FOX)

add_executable(match match.cpp)
target_link_libraries(match FOX)

add_executable(math math.cpp)
target_link_libraries(math FOX)

add_executable(mditest mditest.cpp)
target_link_libraries(mditest FOX)

add_executable(memmap memmap.cpp)
target_link_libraries(memmap FOX)

add_executable(minheritance minheritance.cpp)
target_link_libraries(minheritance FOX)

add_executable(parallel parallel.cpp)
target_link_libraries(parallel FOX)

add_executable(process process.cpp)
target_link_libraries(process FOX)

add_executable(ratio ratio.cpp)
target_link_libraries(ratio FOX)

add_executable(rex rex.cpp)
target_link_libraries(rex FOX)

add_executable(scan scan.cpp)
target_link_libraries(scan FOX)

add_executable(scribble scribble.cpp)
target_link_libraries(scribble FOX)

add_executable(shutter shutter.cpp)
target_link_libraries(shutter FOX)

add_executable(splitter splitter.cpp)
target_link_libraries(splitter FOX)

add_executable(switcher switcher.cpp)
target_link_libraries(switcher FOX)

add_executable(tabbook tabbook.cpp)
target_link_libraries(tabbook FOX)

add_executable(table table.cpp)
target_link_libraries(table FOX)

add_executable(thread thread.cpp)
target_link_libraries(thread FOX)

add_executable(unicode unicode.cpp)
target_link_libraries(unicode FOX)

add_executable(variant variant.cpp)
target_link_libraries(variant FOX)

add_executable(wizard wizard.cpp)
target_link_libraries(wizard FOX)

add_executable(xml xml.cpp)
target_link_libraries(xml FOX)


